<?xml version="1.0"?>
<package format="3">
  <name>omni_follow_controller_pkg</name>
  <version>0.1.0</version>
  <description>Virtual circular leader and omni follower controller using relative-state feedback linearization.</description>
  <maintainer email="oai@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
