<?xml version="1.0"?>
<package format="3">
  <name>omni_formation_controller_pkg</name>
  <version>0.1.0</version>
  <description>Leader-follower formation controller and two-robot bringup launches for Nexus omni bases.</description>
  <maintainer email="oai@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nexus_base_ros</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>bno055</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
